src/test/ui/regions/regions-variance-invariant-use-contravariant.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-variance-invariant-use-contravariant.rs:20:32
   |
LL | fn use_<'short,'long>(c: Invariant<'long>,
   |                          ----------------
LL |                       s: &'short isize,
   |                          ------------- these two types are declared with different lifetimes...
...
LL |     let _: Invariant<'short> = c;
   |                                ^ ...but data from `s` flows into `c` here

error: aborting due to previous error

